--- a/css/brands.css
+++ b/css/brands.css
@@ -70,8 +70,8 @@ button:hover,
 .icon {
   padding: 0px 8px 3.5px 0px;
   vertical-align: middle;
-  width: 20px;
-  height: 20px;
+  width: 50px;
+  height: 50px;
 }
 
 /* Brand Styles
@@ -79,8 +79,8 @@ button:hover,
 
 /* Default (this is great for your own brand color!) */
 .button.button-default {
-  color: #ffffff;
-  background-color: #2457F5;
+  color: #000000;
+  background-color: #ffffff;
 }
 .button.button-default:hover,
 .button.button-default:focus {
@@ -290,7 +290,7 @@ button:hover,
 /* Etsy */
 .button.button-etsy {
   color: #ffffff;
-  background-color: #F45800;
+  background-color: #406221;
 }
 .button.button-etsy:hover,
 .button.button-etsy:focus {
