--- a/css/brands.css
+++ b/css/brands.css
@@ -466,8 +466,9 @@ button:hover,
 
 /* Instagram */
 .button.button-instagram {
-  color: #ffffff;
-  background-image: linear-gradient(-135deg, #1400c8, #b900b4, #f50000);
+  color: #000000;
+  /* background-image: linear-gradient(-135deg, #1400c8, #b900b4, #f50000); */
+  background-color: #ffffff;
 }
 .button.button-instagram:hover,
 .button.button-instagram:focus {
@@ -1078,8 +1079,8 @@ button:hover,
 
 /* YouTube */
 .button.button-yt {
-  color: #ffffff;
-  background-color: #000000;
+  color: #000000;
+  background-color: #ffffff;
   border: 1px solid #FFFFFF;
 }
 .button.button-yt:hover,
